# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  generate_diff.py  pyproject.toml  setup.cfg
.github/workflows/: project-test.yml
gendiff/: __init__.py  build_gendiff_tree.py  cli.py  generate_diff.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: demo.cast  result6_json.txt
